k8s/base/deployment.yaml
# ================================================
# Kubernetes Manifest for the Webcv Project
# Author   : Lumitek
# Date     : 2025-08-15
# Description:
#   This manifest contains the following configurations:
#   - The Nginx Deployment
# ================================================
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webcv
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 10%
      maxSurge: 2
  revisionHistoryLimit: 20
  template:
    spec:
      volumes:
      - name: nginx-config
        configMap:
          name: webcv-config
      containers:
      - name: webcv
        image: "${PORTFOLIO_DOCKERIMAGE}"
        imagePullPolicy: Always
        ports:
        - containerPort: "${NGINX_PORT}"
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
          readOnly: true
        - name: nginx-config
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
          readOnly: true
        resources:
          requests:
            memory: "100Mi"
            cpu: "250m"
          limits:
            memory: "500Mi"
            cpu: "1"
      imagePullSecrets:
      - name: gitcred
---
